--- a/testevr.html
+++ b/testevr.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Identificação de Objetos - Rastreamento Único</title>
+  <title>Identificação de Objetos com Métricas Persistentes</title>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/coco-ssd"></script>
   <style>
@@ -39,7 +39,7 @@
   </style>
 </head>
 <body>
-  <h1>Identificação de Objetos - Rastreamento Único</h1>
+  <h1>Identificação de Objetos - Métricas Persistentes</h1>
   <video id="videoElement" autoplay playsinline muted></video>
   <canvas id="canvas"></canvas>
   <p id="status">Carregando modelo...</p>
@@ -122,25 +122,27 @@
 
     // Atualizar as métricas
     function updateMetrics(predictions) {
-      metricsList.innerHTML = ""; // Limpar métricas na tela
-
+      // Atualizar contagem com base nos objetos detectados
       predictions.forEach(prediction => {
         const { class: className, bbox } = prediction;
 
         // Verificar se é um novo objeto
         if (!isNewObject(className, bbox)) return;
 
-        // Contar a quantidade de vezes que cada classe é detectada
+        // Incrementar a contagem do objeto
         if (!objectMetrics[className]) {
           objectMetrics[className] = 0;
         }
         objectMetrics[className] += 1;
-
-        // Adicionar métricas à interface
-        const listItem = document.createElement("li");
-        listItem.textContent = `Classe: ${className}, Quantidade: ${objectMetrics[className]}`;
-        metricsList.appendChild(listItem);
       });
+
+      // Atualizar a interface com todas as métricas atuais
+      metricsList.innerHTML = ""; // Limpar a lista antes de recriar
+      for (const [className, count] of Object.entries(objectMetrics)) {
+        const listItem = document.createElement("li");
+        listItem.textContent = `Classe: ${className}, Quantidade: ${count}`;
+        metricsList.appendChild(listItem);
+      }
     }
 
     // Detectar objetos no vídeo
