--- a/testevr.html
+++ b/testevr.html
@@ -3,194 +3,268 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Identificação de Objetos - Mapa de Calor e Dimensões</title>
+  <title>Inspeção de Veículos - Responsivo e VR</title>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/coco-ssd"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/yolo"></script>
   <style>
+    /* Corpo geral */
     body {
-      font-family: Arial, sans-serif;
-      text-align: center;
+      font-family: 'Arial', sans-serif;
       margin: 0;
-    }
-    video, canvas {
-      display: block;
-      margin: 20px auto;
-      border: 1px solid #ccc;
-    }
-    #status {
-      font-size: 18px;
+      background: linear-gradient(145deg, #e6e6e6, #ffffff);
       color: #333;
+      text-align: center;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+      overflow-x: hidden;
     }
-    #metrics {
-      margin-top: 10px;
-      font-size: 16px;
-      color: #555;
-      text-align: left;
+
+    h1 {
+      font-size: 2.5em;
+      margin-bottom: 20px;
+      color: #222;
+    }
+
+    /* Contêineres responsivos */
+    #metrics, #logContainer, #dashboard {
+      width: 90%;
       max-width: 640px;
-      margin-left: auto;
-      margin-right: auto;
+      background: #f0f0f0;
+      border-radius: 20px;
+      box-shadow: 10px 10px 20px #bebebe, -10px -10px 20px #ffffff;
+      padding: 20px;
+      margin-top: 20px;
+      overflow-y: auto;
+      max-height: 200px;
     }
-    #switchCamera {
-      margin: 10px;
+
+    #logContainer {
+      background: #222;
+      color: #0f0;
+      font-family: monospace;
+    }
+
+    /* Canvas e vídeo */
+    canvas, video {
+      width: 90%;
+      max-width: 640px;
+      border-radius: 20px;
+      box-shadow: 10px 10px 20px #bebebe, -10px -10px 20px #ffffff;
+      margin-top: 20px;
+    }
+
+    /* Botões */
+    #controls button {
+      background: #e0e0e0;
+      border: none;
+      border-radius: 12px;
       padding: 10px 20px;
       font-size: 16px;
+      font-weight: bold;
+      color: #555;
+      margin: 10px;
+      box-shadow: 5px 5px 10px #bebebe, -5px -5px 10px #ffffff;
       cursor: pointer;
+      transition: all 0.2s ease-in-out;
+    }
+
+    #controls button:active {
+      box-shadow: inset 3px 3px 6px #bebebe, inset -3px -3px 6px #ffffff;
+      transform: scale(0.95);
+    }
+
+    /* Responsividade */
+    @media (max-width: 768px) {
+      h1 {
+        font-size: 1.8em;
+      }
+      #controls button {
+        padding: 8px 16px;
+        font-size: 14px;
+      }
     }
   </style>
 </head>
 <body>
-  <h1>Identificação de Objetos - Mapa de Calor e Dimensões</h1>
+  <h1>Inspeção de Veículos</h1>
   <video id="videoElement" autoplay playsinline muted></video>
   <canvas id="canvas"></canvas>
   <p id="status">Carregando modelo...</p>
   <div id="metrics">
-    <h2>Métricas de Detecção</h2>
+    <h2>Métricas em Tempo Real</h2>
     <ul id="metricsList"></ul>
   </div>
-  <button id="switchCamera">Trocar Câmera</button>
+  <div id="logContainer">
+    <ul id="logList"></ul>
+  </div>
+  <div id="controls">
+    <button id="switchCamera">Trocar Câmera</button>
+    <button id="pauseCapture">Pausar Captura</button>
+    <button id="startVR">Ativar VR</button>
+    <button id="downloadReport">Baixar Relatório</button>
+  </div>
 
   <script>
     const videoElement = document.getElementById('videoElement');
     const canvas = document.getElementById('canvas');
     const ctx = canvas.getContext('2d');
     const metricsList = document.getElementById('metricsList');
+    const logList = document.getElementById('logList');
     const switchCameraBtn = document.getElementById('switchCamera');
+    const pauseCaptureBtn = document.getElementById('pauseCapture');
+    const startVRBtn = document.getElementById('startVR');
+    const downloadReportBtn = document.getElementById('downloadReport');
 
     let model;
-    let currentStream; // Stream atual
-    let usingFrontCamera = true; // Flag para alternar entre câmera frontal e traseira
-    const objectMetrics = {}; // Métricas por classe de objeto
-    const trackedObjects = []; // Lista de objetos rastreados
-    const OBJECT_DISTANCE_THRESHOLD = 50; // Distância máxima para considerar o mesmo objeto (em pixels)
+    let currentStream;
+    let usingFrontCamera = true;
+    let isPaused = false;
+    let xrSession;
+    const objectMetrics = {};
+    const detectionResults = [];
 
-    // Parâmetros da câmera
-    const CAMERA_FOV_CM = 40; // Largura real aproximada do campo de visão da câmera em centímetros
+    const vehicleClasses = ["Car", "Wheel", "Land vehicle", "Vehicle"];
+    const CAMERA_FOV_CM = 40;
 
-    // Cores específicas para diferentes tipos de objetos
-    const objectColors = {
-      person: "rgba(255, 0, 0, 0.5)", // Vermelho para pessoas
-      car: "rgba(255, 0, 255, 0.5)", // Rosa para carros
-      tire: "rgba(0, 0, 255, 0.5)", // Azul para pneus
-      wheel: "rgba(255, 255, 0, 0.5)", // Amarelo para rodas
-      headlight: "rgba(255, 255, 255, 0.5)", // Branco para faróis
-      steering: "rgba(0, 255, 0, 0.5)", // Verde para volantes
-      default: "rgba(100, 100, 100, 0.5)", // Cinza para outros objetos
-    };
-
-    // Configurar e acessar a câmera
+    // Configurar a câmera
     async function setupCamera(facingMode = "user") {
       if (currentStream) {
         currentStream.getTracks().forEach(track => track.stop());
       }
-      try {
-        const stream = await navigator.mediaDevices.getUserMedia({
-          video: { facingMode },
-        });
-        videoElement.srcObject = stream;
-        currentStream = stream;
-        return new Promise((resolve) => {
-          videoElement.onloadedmetadata = () => {
-            videoElement.play();
-            resolve();
-          };
-        });
-      } catch (error) {
-        console.error("Erro ao acessar a câmera:", error);
-        alert("Não foi possível acessar a câmera. Verifique as permissões do navegador.");
-      }
+      const stream = await navigator.mediaDevices.getUserMedia({
+        video: { facingMode },
+      });
+      videoElement.srcObject = stream;
+      currentStream = stream;
     }
 
-    // Carregar o modelo COCO-SSD
+    // Carregar o modelo YOLO
     async function loadModel() {
-      model = await cocoSsd.load();
+      model = await yolo.load();
       document.getElementById('status').innerText = 'Modelo carregado!';
     }
 
-    // Converter dimensões em pixels para centímetros
-    function convertToRealDimensions(bbox, videoWidth, videoHeight) {
-      const [x, y, width, height] = bbox;
-      const realWidth = (width / videoWidth) * CAMERA_FOV_CM; // Largura real
-      const realHeight = (height / videoHeight) * (CAMERA_FOV_CM * (videoHeight / videoWidth)); // Altura real
-      const realArea = (realWidth * realHeight) / 10000; // Área em m²
-      return { realWidth, realHeight, realArea };
-    }
-
-    // Atualizar as métricas
+    // Atualizar métricas
     function updateMetrics(predictions) {
       predictions.forEach(prediction => {
         const { class: className, bbox } = prediction;
-        const { realWidth, realHeight, realArea } = convertToRealDimensions(
+        if (!vehicleClasses.includes(className)) return;
+
+        const dimensions = convertToRealDimensions(
           bbox,
           videoElement.videoWidth,
           videoElement.videoHeight
         );
-        if (!objectMetrics[className]) {
-          objectMetrics[className] = { count: 0, dimensions: [] };
-        }
+
+        if (!objectMetrics[className]) objectMetrics[className] = { count: 0, dimensions: [] };
         objectMetrics[className].count += 1;
-        objectMetrics[className].dimensions.push({ realWidth, realHeight, realArea });
+        objectMetrics[className].dimensions.push(dimensions);
+
+        detectionResults.push({
+          part: className,
+          dimensions,
+          message: `${className} detectado com largura: ${dimensions.realWidth.toFixed(2)} cm, altura: ${dimensions.realHeight.toFixed(2)} cm.`,
+        });
+
+        const logItem = document.createElement('li');
+        logItem.textContent = `${className} detectado | Dimensões: ${dimensions.realWidth.toFixed(2)} x ${dimensions.realHeight.toFixed(2)} cm`;
+        logList.appendChild(logItem);
+        logList.parentElement.scrollTop = logList.parentElement.scrollHeight;
       });
-      metricsList.innerHTML = ""; // Atualiza as métricas na interface
-      for (const [className, data] of Object.entries(objectMetrics)) {
-        const avgWidth = (data.dimensions.reduce((sum, dim) => sum + dim.realWidth, 0) / data.dimensions.length).toFixed(2);
-        const avgHeight = (data.dimensions.reduce((sum, dim) => sum + dim.realHeight, 0) / data.dimensions.length).toFixed(2);
-        const avgArea = (data.dimensions.reduce((sum, dim) => sum + dim.realArea, 0) / data.dimensions.length).toFixed(4);
-        const listItem = document.createElement("li");
-        listItem.textContent = `Classe: ${className}, Quantidade: ${data.count}, Largura Média: ${avgWidth} cm, Altura Média: ${avgHeight} cm, Área Média: ${avgArea} m²`;
-        metricsList.appendChild(listItem);
-      }
+
+      updateUI();
     }
 
-    // Renderizar o mapa de calor
+    // Converter dimensões para unidades reais
+    function convertToRealDimensions(bbox, videoWidth, videoHeight) {
+      const [x, y, width, height] = bbox;
+      const realWidth = (width / videoWidth) * CAMERA_FOV_CM;
+      const realHeight = (height / videoHeight) * (CAMERA_FOV_CM * (videoHeight / videoWidth));
+      return { realWidth, realHeight };
+    }
+
+    // Renderizar mapa de calor
     function renderHeatmap(predictions) {
       predictions.forEach(prediction => {
-        const { class: className, bbox } = prediction;
+        const { bbox, class: className } = prediction;
+
+        if (!vehicleClasses.includes(className)) return;
+
         const [x, y, width, height] = bbox;
-        const color = objectColors[className] || objectColors.default;
-        ctx.fillStyle = color;
+
+        const gradient = ctx.createRadialGradient(
+          x + width / 2,
+          y + height / 2,
+          0,
+          x + width / 2,
+          y + height / 2,
+          Math.max(width, height)
+        );
+        gradient.addColorStop(0, "rgba(255, 0, 0, 0.8)");
+        gradient.addColorStop(1, "rgba(255, 0, 0, 0)");
+
+        ctx.fillStyle = gradient;
         ctx.fillRect(x, y, width, height);
       });
     }
 
-    // Detectar objetos no vídeo
-    async function detectObjects() {
-      if (!model) return;
-      canvas.width = videoElement.videoWidth;
-      canvas.height = videoElement.videoHeight;
-      const predictions = await model.detect(videoElement);
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
-      updateMetrics(predictions);
-      renderHeatmap(predictions);
-      predictions.forEach(prediction => {
-        const [x, y, width, height] = prediction.bbox;
-        const text = `${prediction.class} (${Math.round(prediction.score * 100)}%)`;
-        ctx.beginPath();
-        ctx.rect(x, y, width, height);
-        ctx.lineWidth = 2;
-        ctx.strokeStyle = 'black';
-        ctx.stroke();
-        ctx.fillStyle = 'black';
-        ctx.fillText(text, x, y > 10 ? y - 5 : 10);
-      });
-      requestAnimationFrame(detectObjects);
+    // Ativar Realidade Virtual
+    async function startVR() {
+      if (navigator.xr) {
+        xrSession = await navigator.xr.requestSession("immersive-vr");
+        document.body.style.display = "none"; // Oculta UI no Quest 3
+        alert("Entrando no modo VR!");
+      } else {
+        alert("Dispositivo não suporta VR.");
+      }
     }
 
-    // Trocar entre câmera frontal e traseira
-    switchCameraBtn.addEventListener('click', async () => {
-      usingFrontCamera = !usingFrontCamera;
-      const facingMode = usingFrontCamera ? "user" : "environment";
-      await setupCamera(facingMode);
-      detectObjects();
-    });
+    // Loop de detecção
+    async function detectionLoop() {
+      if (isPaused) return;
 
-    // Inicializar o sistema
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      const predictions = await model.detect(videoElement);
+
+      updateMetrics(predictions);
+      renderHeatmap(predictions);
+
+      requestAnimationFrame(detectionLoop);
+    }
+
+    // Inicializar
     async function init() {
       await setupCamera();
       await loadModel();
-      detectObjects();
+      detectionLoop();
     }
 
     init();
+
+    // Botões
+    switchCameraBtn.addEventListener('click', async () => {
+      usingFrontCamera = !usingFrontCamera;
+      await setupCamera(usingFrontCamera ? 'user' : 'environment');
+    });
+
+    pauseCaptureBtn.addEventListener('click', () => {
+      isPaused = !isPaused;
+      pauseCaptureBtn.textContent = isPaused ? "Retomar Captura" : "Pausar Captura";
+      if (!isPaused) detectionLoop();
+    });
+
+    startVRBtn.addEventListener('click', startVR);
+
+    downloadReportBtn.addEventListener('click', () => {
+      const blob = new Blob([JSON.stringify(detectionResults, null, 2)], { type: "application/json" });
+      const link = document.createElement("a");
+      link.href = URL.createObjectURL(blob);
+      link.download = "vehicle_inspection_report.json";
+      link.click();
+    });
   </script>
 </body>
 </html>
